--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,31 +1,36 @@
 name: Generate snake animation
-
 on:
-  schedule: # execute every 12 hours
-    - cron: "* */12 * * *"
-
+  schedule:
+    - cron: "0 */12 * * *"  # Runs every 12 hours
   workflow_dispatch:
-
   push:
     branches:
-    - master
-
+      - main
 jobs:
   generate:
     permissions:
       contents: write
     runs-on: ubuntu-latest
     timeout-minutes: 5
-
+    
     steps:
-      - name: generate snake.svg
+      - uses: actions/checkout@v3
+      
+      - name: Generate snake.svg for light mode
         uses: Platane/snk/svg-only@v3
         with:
-          github_user_name: ${{ github.repository_owner }}
-          outputs: dist/snake.svg?palette=github-dark
-
-
-      - name: push snake.svg to the output branch
+          github_user_name: rafidrahman1
+          outputs: |
+            dist/snake-light.svg?color_snake=333&color_dots=#ebedf0,#9be9a8,#40c463,#30a14e,#216e39
+      
+      - name: Generate snake.svg for dark mode
+        uses: Platane/snk/svg-only@v3
+        with:
+          github_user_name: rafidrahman1
+          outputs: |
+            dist/snake-dark.svg?color_snake=#c6e4dd&color_dots=#161b22,#0e4429,#006d32,#26a641,#39d353
+      
+      - name: Push snake.svg to the output branch
         uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
           target_branch: output
