--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -19,14 +19,14 @@ jobs:
       - name: Generate snake.svg for light mode
         uses: Platane/snk/svg-only@v3
         with:
-          github_user_name: rafidrahman1
+          github_user_name: mjmohona
           outputs: |
             dist/snake-light.svg?color_snake=333&color_dots=#ebedf0,#9be9a8,#40c463,#30a14e,#216e39
       
       - name: Generate snake.svg for dark mode
         uses: Platane/snk/svg-only@v3
         with:
-          github_user_name: rafidrahman1
+          github_user_name: mjmohona
           outputs: |
             dist/snake-dark.svg?color_snake=#c6e4dd&color_dots=#161b22,#0e4429,#006d32,#26a641,#39d353
       
